--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   },
   "homepage": "https://furashcka.github.io/vue-deep/",
   "dependencies": {
-    "lodash": "^4.17.20",
-    "vue": "^2.6.11"
+    "lodash": "^4.17.20"
   }
 }
